--- a/index.html
+++ b/index.html
@@ -4,48 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mitras TIG Welding</title>
+
     <style>
         body {
             margin: 0;
             font-family: Arial, Helvetica, sans-serif;
-            background-color: #1f1f1f;
-            color: #ffffff;
+            background-color: #0f0f0f;
+            color: #f2f2f2;
         }
 
         header {
-            display: flex;
-            align-items: center;
-            padding: 40px;
-            background-color: #111;
+            background: linear-gradient(135deg, #000, #1a1a1a);
+            padding: 30px 20px;
+            text-align: center;
         }
 
         header img {
             max-width: 160px;
-            margin-right: 30px;
+            margin-bottom: 15px;
         }
 
         header h1 {
-            font-size: 42px;
-            margin: 0;
+            font-size: 36px;
+            margin: 10px 0;
+            letter-spacing: 2px;
         }
 
-        header h2 {
-            font-weight: normal;
-            margin-top: 10px;
-            color: #cccccc;
-        }
-
-        .line {
-            height: 3px;
-            width: 80px;
-            background-color: #ff6a00;
-            margin: 30px 0;
+        header p {
+            color: #aaa;
+            font-size: 16px;
         }
 
         section {
-            padding: 40px;
+            padding: 40px 20px;
             max-width: 1100px;
             margin: auto;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 28px;
+            margin-bottom: 30px;
+            color: #ff7a00;
         }
 
         .services {
@@ -54,87 +54,86 @@
             gap: 20px;
         }
 
-        .box {
-            background-color: #2a2a2a;
-            padding: 20px;
-            border-left: 4px solid #ff6a00;
+        .service-box {
+            background: #1b1b1b;
+            padding: 25px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
+        }
+
+        .gallery img {
+            width: 100%;
+            border-radius: 10px;
         }
 
         .contact {
-            background-color: #111;
-            padding: 40px;
+            text-align: center;
+            background: #1a1a1a;
+            padding: 40px 20px;
         }
 
-        .contact p {
-            font-size: 18px;
-            margin: 10px 0;
+        .contact a {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 15px 30px;
+            background: #ff7a00;
+            color: #000;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 30px;
         }
 
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #000;
-            color: #777;
             font-size: 14px;
-        }
-
-        a {
-            color: #ff6a00;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+            color: #777;
+            background: #000;
         }
     </style>
 </head>
+
 <body>
 
 <header>
-    <img src="logo.png" alt="Mitras TIG Welding logo">
-    <div>
-        <h1>Mitras TIG Welding</h1>
-        <h2>TIG / MIG / MAG zavarivanje</h2>
-        <div class="line"></div>
-        <p>Precizno zavarivanje • Kvalitet bez kompromisa</p>
-    </div>
+    <img src="images/logo.png" alt="Mitras TIG Welding Logo">
+    <h1>MITRAS TIG WELDING</h1>
+    <p>Precizno • Profesionalno • Pouzdano</p>
 </header>
 
 <section>
-    <h2>O nama</h2>
-    <div class="line"></div>
-    <p>
-        Mitras TIG Welding je specijalizovana usluga profesionalnog zavarivanja.
-        Fokusirani smo na preciznost, čistoću vara i dugotrajna rešenja za industriju
-        i privatne klijente.
-    </p>
+    <h2>Usluge</h2>
+    <div class="services">
+        <div class="service-box">TIG zavarivanje inoxa</div>
+        <div class="service-box">Aluminijumsko zavarivanje</div>
+        <div class="service-box">Industrijski i precizni radovi</div>
+        <div class="service-box">Popravke i specijalni zahtevi</div>
+    </div>
 </section>
 
 <section>
-    <h2>Usluge</h2>
-    <div class="line"></div>
-    <div class="services">
-        <div class="box">TIG zavarivanje inoxa</div>
-        <div class="box">TIG zavarivanje aluminijuma</div>
-        <div class="box">MIG / MAG zavarivanje</div>
-        <div class="box">Industrijske konstrukcije</div>
-        <div class="box">Popravke i dorade</div>
-        <div class="box">Precizni metalni radovi</div>
+    <h2>Galerija radova</h2>
+    <div class="gallery">
+        <img src="images/1.jpg">
+        <img src="images/2.jpg">
+        <img src="images/3.jpg">
     </div>
 </section>
 
 <section class="contact">
     <h2>Kontakt</h2>
-    <div class="line"></div>
-    <p>👤 <strong>Vladimir Petrović</strong></p>
-    <p>📞 <a href="tel:+381612911414">061 291 1414</a></p>
-    <p>📍 Vrbovac</p>
-    <p>📧 <a href="mailto:vladimir.petrovic.vbps@gmail.com">vladimir.petrovic.vbps@gmail.com</a></p>
-    <p>📸 Instagram: <a href="https://www.instagram.com/mitras_tig_welding" target="_blank">@mitras_tig_welding</a></p>
+    <p>Za saradnju i ponude – javite se direktno</p>
+    <a href="mailto:vladimir.petrovic.vbps@gmail.com">Pošalji email</a>
 </section>
 
 <footer>
-    © 2026 Mitras TIG Welding • Sva prava zadržana
+    © 2026 Mitras TIG Welding
 </footer>
 
 </body>
